charts/camunda-platform-8.10/test/unit/common/golden/optimize-http-ingress.golden.yaml
---
# Source: camunda-platform/templates/common/ingress-optimize-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-platform-test-optimize-http
  labels:
    app: camunda-platform
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/part-of: camunda-platform
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: camunda.example.com
      http:
        paths:
          - backend:
              service:
                name: camunda-platform-test-optimize
                port:
                  number: 80
            path: /optimize
            pathType: Prefix
